Changes in version 3.4 - Unreleased
------------------------------------

Add OSGi metadata to the main rrd4j jar.

The LinearInterpolator can now uses an enum instead of a integer, the old method is now deprecated.

Changes in version 3.3.1 - 5 Oct 2018
------------------------------------

A rebuild of 3.3. Since Java 9, it's dangerous to build pre-9 java without checking against the old runtime.

Changes in version 3.3 - 28 Sep 2018
------------------------------------

Updated NIO backend to work on java 9+.
A few update to code from sonarcloud recommendations.

Changes in version 3.2 - 11 Nov 2017
------------------------------------

Better management of multiple backend of the same kind. To do that, URI can be used instead of path and the RrdBackendFactory can take a list of active backend that will be checked in order.
Each backend managed and generate URI using different kind of scheme. 
As URI is used internally now, it's dangerous to change the default backend once some rrd are used because it can change the internally generated URI. To avoid that,
either change the default factory once at the beginning or only use URI for rrd's path.

Allows longer that 20 characters in datasource names, the new limit is now 65535 characters.
A offset is encoded in the datasource name, using the private use area from unicode (https://en.wikipedia.org/wiki/Private_Use_Areas). So if a long name is used and the rrd read
by an old library, the name returned will be the long name reduced to about 17 or 18 characters, depending of the length of the file, with a 
few undisplayable characters appended. But if this area is already used for some custom usage, some strange results will happens.

RrdBackend.setFactory should not be public it's not to be used by end user. But to late to make it private and final as it should be.

MongoDB backed end updated to 3.5.0.
