@@ -57,7 +57,7 @@ public class RrdRandomAccessFileBackend extends  RrdFileBackend {
     protected void read(long offset, byte[] b) throws IOException {
         rafile.seek(offset);
         if (rafile.read(b) != b.length) {
-            throw new IOException("Not enough bytes available in file " + getPath());
+            throw new RrdBackendException("Not enough bytes available in file " + getPath());
         }
     }
 
